src/objects/IPM_Project_GKM_To_Phase_Matrix__mdt.object
<CustomObject>
    <description>Stores the matrix of Project GKM model and Project phase and the corresponding financial types to be validated</description>
    <fields>
        <fullName>Financial_Type_To_Validate__c</fullName>
        <label>Financial Type To Validate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GKM_Model__c</fullName>
        <label>GKM Model</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IPM Project GKM To Phase Matrix</label>
    <pluralLabel>IPM Project GKM To Phase Matrix</pluralLabel>
</CustomObject>